tests/errors/syntax_unterminated_string.dang
let x = "hello
let y = 2
